--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<div id="app"></div>
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+<canvas id="canvas"></canvas>
 <script type="module" src="/src/main.ts"></script>
