--- a/level-editor.html
+++ b/level-editor.html
@@ -57,16 +57,18 @@
       .grid-container {
         display: grid;
         grid-template-columns: repeat(20, 32px);
-        grid-template-rows: repeat(8, 32px);
-        gap: 1px;
-        background-color: #ddd;
-        border: 1px solid #999;
+        grid-template-rows: repeat(14, 32px);
+        gap: 0;
+        background-color: #999;
+        border: 1px solid #666;
         margin-bottom: 20px;
       }
       .grid-cell {
         width: 32px;
         height: 32px;
         cursor: pointer;
+        border: 1px solid #666;
+        box-sizing: border-box;
       }
       button {
         padding: 10px 15px;
@@ -111,20 +113,14 @@
           <div
             class="tile-option"
             data-type="2"
-            style="background-color: #eb8c34"
-            title="Box (2)"
+            style="background-color: #32e329"
+            title="Goal (2)"
           ></div>
           <div
             class="tile-option"
             data-type="3"
-            style="background-color: #32e329"
-            title="Goal (3)"
-          ></div>
-          <div
-            class="tile-option"
-            data-type="4"
             style="background-color: #4b555c"
-            title="Wall (4)"
+            title="Wall (3)"
           ></div>
         </div>
         <div>
@@ -147,16 +143,14 @@
       const TileType = {
         Empty: 0,
         Player: 1,
-        Box: 2,
-        Goal: 3,
-        Wall: 4,
+        Goal: 2,
+        Wall: 3,
       };
 
       // Tile colors from the game
       const tileColors = {
         [TileType.Empty]: "transparent",
         [TileType.Player]: "#2a71f5",
-        [TileType.Box]: "#eb8c34",
         [TileType.Goal]: "#32e329",
         [TileType.Wall]: "#4b555c",
       };
