--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <meta charset="UTF-8" />
 <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
+<h1>Level 1</h1>
 <canvas id="canvas"></canvas>
 <script type="module" src="/src/main.ts"></script>
